Fix layout issues in featured event boxes
If the boxes had less than 3 events in them the width of the
eventbox was wrong.

--- a/app/webpacker/styles/events.scss
+++ b/app/webpacker/styles/events.scss
@@ -226,6 +226,8 @@
     background: #F0F0F0;
     float: left;
     padding: 20px;
+    width: 100%;
+    box-sizing: border-box;
     + .events-featured {
         margin-top: 30px;
     }
